Fix alignment of beaker://settings sidebar

--- a/app/stylesheets/builtin-pages.less
+++ b/app/stylesheets/builtin-pages.less
@@ -422,7 +422,6 @@
     top: 75px;
     left: 15px;
     width: 200px;
-    overflow: auto;
 
     .section {
       margin-bottom: 40px;
