--- a/app/stylesheets/builtin-pages/settings.less
+++ b/app/stylesheets/builtin-pages/settings.less
@@ -11,6 +11,10 @@
     border: 1px solid #e6e6e6;
   }
 
+  .builtin-sidebar {
+    left: 35px; // TODO why is *this* sidebar the only one that's janky?
+  }
+
   .subtitle-heading {
     margin-bottom: 10px;
   }
